k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beebop-deploy-redis
  labels:
    app: beebop-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beebop-redis
  template:
    metadata:
      labels:
        app: beebop-redis
    spec:
      containers:
        - name: beebop-redis
          image: redis
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beebop-deploy-server
  labels:
    app: beebop-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beebop-server
  template:
    metadata:
      labels:
        app: beebop-server
    spec:
      containers:
        - name: beebop-server
          # TODO: update to main when branch is merged
          image: mrcide/beebop-server:test-k8s
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beebop-deploy-py-api
  labels:
    app: beebop-py-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beebop-py-api
  template:
    metadata:
      labels:
        app: beebop-py-api
    spec:
      containers:
        - name: beebop-py-api
          image: mrcide/beebop-py:main
          imagePullPolicy: Always
          volumeMounts:
            - name: beebop-storage
              mountPath: /beebop/storage
      volumes:
        - name: beebop-storage
          persistentVolumeClaim:
            claimName: beebop-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beebop-deploy-py-worker
  labels:
    app: beebop-py-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beebop-py-worker
  template:
    metadata:
      labels:
        app: beebop-py-worker
    spec:
      containers:
        - name: beebop-py-worker
          image: mrcide/beebop-py:main
          imagePullPolicy: Always
          command: ["rqworker"]
          volumeMounts:
            - name: beebop-storage
              mountPath: /beebop/storage
      volumes:
        - name: beebop-storage
          persistentVolumeClaim:
            claimName: beebop-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beebop-deploy-client
  labels:
    app: beebop-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beebop-client
  template:
    metadata:
      labels:
        app: beebop-client
    spec:
      containers:
        - name: beebop-client
          # TODO: update to main when branch merged
          image: mrcide/beebop-proxy:test-k8s
          imagePullPolicy: Always
